--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -25,7 +25,6 @@
                 android:paddingBottom="4dp"
                 android:background="#FFFFFF">
 
-
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
@@ -41,15 +40,15 @@
 
                 <RatingBar
                     android:id="@+id/normalUserRating"
-                    android:isIndicator="false"
                     style="?android:attr/ratingBarStyleIndicator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
                     android:layout_marginTop="11dp"
+                    android:layout_marginEnd="15dp"
+                    android:isIndicator="false"
                     android:progressTint="#ffd700"
                     android:stepSize="1"
-                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
