--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -9,8 +9,7 @@
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
         <LinearLayout
@@ -170,7 +169,7 @@
             <ListView
                 android:id="@+id/commentListView"
                 android:layout_width="match_parent"
-                android:layout_height="375dp"
+                android:layout_height="400dp"
                 android:layout_marginTop="5dp"
                 android:divider="@null"
                 tools:layout_editor_absoluteY="372dp"
@@ -185,7 +184,6 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         app:fabSize="normal"
         app:srcCompat="@drawable/ic_edit"
         app:backgroundTint="@color/white"
@@ -194,11 +192,9 @@
         android:layout_gravity="right"
         app:fabCustomSize="50dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
-
-
+        android:translationY="-10dp"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
-    </ScrollView>
+</ScrollView>
