--- a/app/src/main/res/layout/fragment_admin_check.xml
+++ b/app/src/main/res/layout/fragment_admin_check.xml
@@ -247,7 +247,7 @@
             android:layout_marginStart="68dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#DAD9DC"
+            android:backgroundTint="#9754CB"
             android:text="Apply"
             android:textColor="#F8F8F8"
             android:textSize="14sp"
@@ -263,7 +263,7 @@
             android:layout_marginStart="96dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#DAD9DC"
+            android:backgroundTint="#9754CB"
             android:text="Cancel"
             android:textColor="#F7F7F8"
             android:textStyle="bold"
