--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -214,8 +214,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
+            android:gravity="center"
             android:paddingBottom="4dp"
-            android:gravity = "center">
+            >
 
             <Button
                 android:id="@+id/applyButton"
@@ -223,7 +224,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#DAD9DC"
+                android:backgroundTint="#9754CB"
                 android:text="Apply"
                 android:textColor="#F8F8F8"
                 android:textSize="14sp"
@@ -236,7 +237,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:backgroundTint="#DAD9DC"
+                android:backgroundTint="#9754CB"
                 android:text="Cancel"
                 android:textColor="#F7F7F8"
                 android:textStyle="bold" />
